--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/yaml": "4.2.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "3.0.*",
         "symfony/browser-kit": "^4.2",
         "symfony/css-selector": "^4.2",
         "symfony/debug-bundle": "^4.2",
